fix compilation notices